--- a/cems-api.yml
+++ b/cems-api.yml
@@ -51,6 +51,26 @@ paths:
           description: "Not authenticated"
         403:
           description: "User was authenticated but not authorized"
+  /company/{company_id}/features:
+    get:
+      tags:
+        - "Company"
+      summary: "List enabled company features"
+      description: ""
+      parameters:
+        - in: "path"
+          name: "company_id"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/CompanyFeatures"
+        403:
+          description: "User was authenticated but not authorized"
   /company/user:
     post:
       tags:
@@ -129,7 +149,7 @@ paths:
         403:
           description: "User was authenticated but not authorized"
         404:
-          description: "Company not found"
+          description: "Company domain alias not found"
   /company/{company_id}/login:
     post:
       tags:
@@ -740,7 +760,23 @@ definitions:
                     type: "boolean"
                     example: true
 
-    
+  CompanyFeatures:
+    type: "object"
+    required: 
+      - "data"
+    properties: 
+      data: 
+        type: "array"
+        items: 
+          type: "object"
+          properties: 
+            constant: 
+              type: "string"
+              example: "university-reporting"
+            name: 
+              type: "string"
+              example: "Download Reports"
+
   AliasConfig:
     type: "object"
     required: 
