--- a/cems-api.yml
+++ b/cems-api.yml
@@ -137,6 +137,25 @@ paths:
           description: "User was authenticated but not authorized"
         404:
           description: "Company not found"
+  /company/{company_id}/organizational-unit/list:
+    get:
+      tags:
+        - "Company"
+      summary: "List of organizational units for a company"
+      description: ""
+      parameters:
+        - in: "path"
+          name: "company_id"
+          required: true
+          type: "integer"
+          pattern: '\d+'
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/OrgUnitList"
+        403:
+          description: "User was authenticated but not authorized"
   /company/user:
     post:
       tags:
@@ -893,6 +912,35 @@ definitions:
             name: 
               type: "string"
               example: "Beginner"
+              
+  OrgUnitList:
+    type: "object"
+    required: 
+        - "data"
+    properties: 
+      data: 
+        type: "array"
+        items:
+          type: "object"
+          properties: 
+            formattedLabel: 
+              type: "string"
+              example: "- Demo Region"
+            path:
+              type: "string"
+              example: "Demo Company"
+            id: 
+              type: "number"
+              example: 115
+            label: 
+              type: "string"
+              example: "Demo Region"
+            name: 
+              type: "string"
+              example: "Demo Region"
+            parentUnit:
+              type: "number"
+              example: 113
 
   AliasConfig:
     type: "object"
