--- a/cems-api.yml
+++ b/cems-api.yml
@@ -29,6 +29,79 @@ paths:
           description: "User was authenticated but not authorized"
         404:
           description: "Company not found"
+  /company/{company_id}/access_level/{access_level_constant}/courses:
+    get:
+      tags:
+        - "Company"
+      summary: "Get all courses for a given company and access level"
+      description: ""
+      parameters:
+        - name: "company_id"
+          in: "path"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+        - name: "access_level_constant"
+          in: "path"
+          description: ""
+          required: true
+          type: "string"
+          pattern: '[\w-]+'
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/AccessLevelCourses"
+        403:
+          description: "User was authenticated but not authorized"
+        404:
+          description: "Company or access level not found"
+          
+  /company/{company_id}/boc_instructional_level:
+    get:
+      tags:
+        - "Company"
+      summary: "Board of Certification instructional level"
+      description: ""
+      parameters:
+        - in: "path"
+          name: "company_id"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/BOCLevel"
+        403:
+          description: "User was authenticated but not authorized"
+        404:
+          description: "Company not found"
+  /company/{company_id}/clinical_topic:
+    get:
+      tags:
+        - "Company"
+      summary: "List all clinical topics"
+      description: ""
+      parameters:
+        - in: "path"
+          name: "company_id"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/ClinicalTopic"
+        403:
+          description: "User was authenticated but not authorized"
+        404:
+          description: "Company not found"
   /company/{company_id}/curriculum:
     get:
       tags:
@@ -69,6 +142,68 @@ paths:
           description: "Success"
           schema:
             $ref: "#/definitions/CompanyFeatures"
+        403:
+          description: "User was authenticated but not authorized"
+  /company/{company_id}/instructional_level:
+    get:
+      tags:
+        - "Company"
+      summary: "List instructional levels"
+      description: ""
+      parameters:
+        - in: "path"
+          name: "company_id"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/InstructLevel"
+        403:
+          description: "User was authenticated but not authorized"
+        404:
+          description: "Company not found"
+  /company/{company_id}/organizational-unit/list:
+    get:
+      tags:
+        - "Company"
+      summary: "List of organizational units for a company"
+      description: ""
+      parameters:
+        - in: "path"
+          name: "company_id"
+          required: true
+          type: "integer"
+          pattern: '\d+'
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/OrgUnitList"
+        403:
+          description: "User was authenticated but not authorized"
+  /company/{company_id}/resource:
+    get:
+      tags:
+        - "Company"
+      summary: "List all company enabled resources"
+      description: ""
+      parameters:
+        - in: "path"
+          name: "company_id"
+          required: true
+          type: "integer"
+          pattern: '\d+'
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/EnabledResources"
+        401:
+          description: "Not authenticated"
         403:
           description: "User was authenticated but not authorized"
   /company/user:
@@ -714,6 +849,105 @@ definitions:
             type: "string"
             example: "SUBSCRIPTION"
             
+  AccessLevelCourses:
+    type: "object"
+    required: 
+      - "data"
+      - "metadata"
+    properties: 
+      data: 
+        type: "array"
+        items: 
+          type: "object"
+          properties: 
+            id: 
+              type: "number"
+              example: 1234
+            name: 
+              type: "string"
+              example: "Ethics and Management"
+            description: 
+              type: "string"
+              example: "<p><span style=\"font-size: small;\">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit amet faucibus metus. Nullam volutpat nunc in dolor auctor posuere. Nulla at vulputate tellus. Quisque a tellus metus. Praesent placerat hendrerit est ut dictum. Donec nulla magna, vestibulum sit amet rutrum id, faucibus vitae eros. Ut dictum tellus sit amet facilisis commodo. Aenean nulla leo, mattis sed condimentum et, eleifend at justo. Morbi eget varius ligula. In eget mollis magna.</span></p>"
+            hours: 
+              type: "number"
+              example: 0.5
+            category_name:
+              type: "string"
+              example: "Management Training"
+            approval_status_name:
+              type: "string"
+              example: "Professional Development - No CE Credit"
+            item_format_name: 
+              type: "string"
+              example: "Text"
+            preview_link: 
+              type: "string"
+              example: "/uploads/courses/1234/online/image.png"
+            preview_name: 
+              type: "string"
+              example: "Book Cover"
+            preview_type: 
+              type: "string"
+              example: "image"
+            is_credit:
+              type: "boolean"
+              example: true
+            broadcase_date:
+              type: "string"
+              format: "date-time"
+              example: "2017-07-21T17:32:28Z"
+      metadata: 
+        required: 
+          - "page"
+          - "limit"
+          - "total"
+        properties: 
+          page: 
+            type: "number"
+            example: 1
+          limit: 
+            type: "number"
+            example: 10
+          total: 
+            type: "string"
+            example: "424"
+        type: "object"
+
+  BOCLevel:
+    type: "object"
+    required: 
+      - "data"
+    properties: 
+      data: 
+        type: "array"
+        items: 
+          type: "object"
+          properties: 
+            id: 
+              type: "number"
+              example: 1
+            name: 
+              type: "string"
+              example: "Essential"
+              
+  ClinicalTopic:
+    type: "object"
+    required: 
+      - "data"
+    properties: 
+      data: 
+        type: "array"
+        items: 
+          type: "object"
+          properties: 
+            id: 
+              type: "number"
+              example: 272
+            name: 
+              type: "string"
+              example: "Abuse/Neglect"
+
   CompanyCurricula:
     type: "object"
     required: 
@@ -776,6 +1010,72 @@ definitions:
             name: 
               type: "string"
               example: "Download Reports"
+              
+  InstructLevel:
+    type: "object"
+    required: 
+      - "data"
+    properties: 
+      data: 
+        type: "array"
+        items: 
+          type: "object"
+          properties: 
+            id: 
+              type: "number"
+              example: 1
+            name: 
+              type: "string"
+              example: "Beginner"
+              
+  OrgUnitList:
+    type: "object"
+    required: 
+        - "data"
+    properties: 
+      data: 
+        type: "array"
+        items:
+          type: "object"
+          properties: 
+            formattedLabel: 
+              type: "string"
+              example: "- Demo Region"
+            path:
+              type: "string"
+              example: "Demo Company"
+            id: 
+              type: "number"
+              example: 115
+            label: 
+              type: "string"
+              example: "Demo Region"
+            name: 
+              type: "string"
+              example: "Demo Region"
+            parentUnit:
+              type: "number"
+              example: 113
+              
+  EnabledResources:
+    type: "object"
+    required: 
+      - "data"
+    properties: 
+      data: 
+        type: "array"
+        items: 
+          type: "object"
+          properties: 
+            constant: 
+              type: "string"
+              example: "users"
+            name: 
+              type: "string"
+              example: "Users"
+            description: 
+              type: "string"
+              example: "User Related Features"
 
   AliasConfig:
     type: "object"
